# semestre_vi

./: .gitignore  CLAUDE.md  GEMINI.md  main.py  pyproject.toml
econometria/clases/: clase_01.py
econometrics/clases/: colinealidad.py  linea_regresión.py  medias_moviles.py  modelo_stats.py  prueba_hipotesis_breusch_pagan.py  regresión_multiple.py.py  regresión_multiple_v2.py
econometrics/clases/data/: cardano.csv  mex_fin(in).csv
econometrics/entregas_clase/: caso_1.py  caso_2.py  caso_3.py  caso_4.py  caso_5.py  colinealidad_1.py  colinealidad_2.py  colinealidad_3.py  colinealidad_4.py  desafio_2.py  ejercicio_dificil.py  juegos_1.py  regresion_multi_1.py  regresion_multi_10.py  regresion_multi_11.py  regresion_multi_12.py  regresion_multi_13.py  regresion_multi_14.py  regresion_multi_2.py  regresion_multi_3.py  regresion_multi_4.py  regresion_multi_5.py  regresion_multi_6.py  regresion_multi_7.py  regresion_multi_8.py  regresion_multi_9.py
econometrics/exmane_1/: ejercicio_1.py  ejercicio_2.py  ejercicio_3.py  plantilla.py
econometrics/proyecto_1/: extraccion_datos.py  funciones.py  igae_datos.csv  proyecto.py  proyecto_rorro.py  regresion_lineal.py
econometrics/tareas/: actividad_01.ipynb  actividad_02.ipynb  actividad_03.ipynb
image_processing/: ajustes_dinamicos.py  autoajuste_foco.py  primeras_imagenes.py  senales.py  vision_node.py
image_processing/data/: ESPECTRO_GOLF
image_processing/data/rupestre/proceso/imagen 1/: Thumbs.db
image_processing/practica/: ejercicio.py  practica_2.ipynb
proyectos_pruebas/: ocr_extractor.py
(+1 files in other folders)
