[project]
name = "semestre-vi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = [
    "colorstreak>=2.1.3",
    "easyocr>=1.7.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "yfinance>=1.1.0",
]
